k8s-webook-deployment.yaml
apiVersion: apps/v1
# 声明这里配置是deployment
kind: Deployment
metadata:
  # 也叫做webook，
  name: webook
spec:
  # 副本数量
  replicas: 3
  selector:
    matchLabels:
      app: webook
  # template 描述的是你的pod是怎么样的
  template:
    metadata:
      labels:
        app: webook
    # pod的具体信息
    spec:
      containers:
        - name: webook
          image: circles99/webook:v0.0.1
          ports:
            - containerPort: 8080
