k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  type: NodePort
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      # 指在service本身的
      port: 16379
      # 指pod上暴露的端口
      targetPort: 6379
      # 指我在k8s集群之外访问的端口
      nodePort: 30003
