k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
spec:
  # 需要用nginx
  ingressClassName: nginx
  # 转发规则
  rules:
    # 当host是live.webook.com的时候命中这条
    - host: live.webook.com
      http:
        paths:
          # 请求路径的前缀是/的时候，将流量转发过去后面的webook服务上，端口是82
          - backend:
              service:
                # 这个名字从 k8s-webook-service文件中metadata name中来
                name: webook
                # port也是从 k8s-webook-service文件中来
                port:
                  number: 82
            pathType: Prefix
            path: /
